<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/addCommuteToolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow"
                    android:background="@android:color/transparent"
                    android:padding="16dp"
                    android:contentDescription="@string/back_button_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/add_commute_title"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/addCommuteStartAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/start_address_hint"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_close"
            android:drawablePadding="5dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/addCommuteEndAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/end_address_hint"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:padding="5dp"
            android:drawableEnd="@drawable/ic_close"
            android:drawablePadding="5dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/commute_name_title"
            android:textSize="16sp"
            android:textColor="@color/cardText" />

        <EditText
            android:id="@+id/addCommuteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/commute_name_hint"
            android:inputType="textCapSentences" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/addCommuteAvoidTolls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avoid_tolls"
                android:textSize="16sp"
                android:textColor="@color/cardText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/addCommuteAvoidHighways"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avoid_highways"
                android:textSize="16sp"
                android:textColor="@color/cardText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/addReverseCommute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Reverse Commute"
                android:textSize="16sp"
                android:textColor="@color/cardText" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_info" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveCommute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/save"
        android:textColor="@color/disabledText"
        android:background="@color/disabled"
        android:enabled="false" />

</FrameLayout>